Updates to MPC Demo

--- a/DEMO_MPCcredit_vs_MPCincome.ipynb
+++ b/DEMO_MPCcredit_vs_MPCincome.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 1: Tell Python where to find the main HARK scripts (such as HARKcore.py) and the ConsumptionSaving scripts (such as ConsIndShockModel.py)"
+    "**Step** 1: Tell Python where to find the main HARK scripts (such as <font color='green'>HARKcore.py</font>) and the ConsumptionSaving scripts (such as <font color='green'>ConsIndShockModel.py</font>)"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2: Bring in an agent making a consumption/ savings decision every period, subject to transitory and permanent income shocks,"
+    "__Step 2__: Bring in an agent making a consumption/ savings decision every period, subject to transitory and permanent income shocks,"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... and create an instance of the consumer type using the default parameter values. We create the instance of the consumer type by calling <span style=\"color:blue\">IndShockConsumerType()</span> and pass the default parameter values by passing <span style=\"color:blue\">**Params.init_idiosyncratic_shocks</span> as an argument:"
+    "... and create an instance of the consumer type using the default parameter values. We create the instance of the consumer type by calling <span style=\"color:blue\">IndShockConsumerType()</span> and pass the default parameter values by passing `**Params.init_idiosyncratic_shocks` as an argument:"
    ]
   },
   {
@@ -92,9 +92,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have now created an instance of a very standard consumer type. **Note** that many assumptions are made in creating a standard consumer type, and as with any structural model, these assumptions matter. For example, this consumer pays the same interest rate on debt as she earns on savings.\n",
+    "We have now created an instance of a very standard consumer type.<br> **Note** that many assumptions are made in creating a standard consumer type, and as with any structural model, these assumptions matter. For example, this consumer pays the same interest rate on debt as she earns on savings.\n",
     "\n",
-    "Alternatively, if we wanted to solve the problem of a consumer who pays a higher interest rate on debt than the rate earned on savings, we could easily do so by importing a *different model* from HARK and create an instance of that ConsumerType instead.\n",
+    "Alternatively, if we wanted to solve the problem of a consumer who pays a higher interest rate on debt than the rate earned on savings, we could easily do so by importing a *different model* from HARK and create an instance of that <font color='blue'>ConsumerType</font> instead.\n",
     "\n",
     "To see this modification in action, simply uncomment (remove the hashtag) from the two lines of code in the block below, and see how results change."
    ]
@@ -115,14 +115,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 3: Modify parameter values as needed.\n",
+    "__Step 3__: Modify parameter values as needed.\n",
     "\n",
-    "To see all the parameters used in the model (along with their default values), see <span style=\"color:blue\">ConsumerParameters.py</span>\n",
+    "To see all the parameters used in the model (along with their default values), see <span style=\"color:green\">ConsumerParameters.py</span>\n",
     "\n",
-    "Parameter values are stored as attributes of the ConsumerType instance. For example, the risk-free interest rate <span style=\"color:blue\">Rfree</span> is stored as <span style=\"color:blue\">BaselineExample.Rfree</span>.\n",
-    "Because we created <span style=\"color:blue\">BaselineExample</span> using the default parameter values, at the moment <span style=\"color:blue\">BaselineExample.Rfree</span> is set to the default value of <span style=\"color:blue\">Rfree</span> (which, at the time this demo was written, was 1.03). \n",
+    "Parameter values are stored as attributes of the <font color='blue'>ConsumerType</font> instance. For example, the risk-free interest rate `Rfree` is stored as <span style=\"color:blue\">BaselineExample.Rfree</span>.\n",
+    "Because we created <span style=\"color:blue\">BaselineExample</span> using the default parameter values, at the moment <span style=\"color:blue\">BaselineExample.Rfree</span> is set to the default value of `Rfree` (which, at the time this demo was written, was 1.03). \n",
     "\n",
-    "Therefore, to modify the risk-free interest rate used in <span style=\"color:blue\">BaselinExample</span> (say, for example, to 1.02) we simply assign a new value to the <span style=\"color:blue\">Rfree</span> attribute:"
+    "Therefore, to modify the risk-free interest rate used in <span style=\"color:blue\">BaselineExample</span> (say, for example, to 1.02) we simply assign a new value to the `Rfree` attribute:"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can similarly modify other attributes of the ConsumerType instance (titled <span style=\"color:blue\">BaselineExample</span>):"
+    "We can similarly modify other attributes of the <font color='blue'>ConsumerType</font> instance (titled <span style=\"color:blue\">BaselineExample</span>):"
    ]
   },
   {
@@ -164,7 +164,7 @@
     "There is one more (slightly more complicated) parameter we must modify, the \"cycles\" attribute. This parameter indicates *how often* the sequence of periods must be solved, \n",
     "> Imagine a consumer with an infinite horizon of periods that (ex-ante) are all identical. Conversely, imagine a consumer with a finite lifecycle; or a consumer who faces an infinite horizon of periods that are cycle but are not identical (ie a ski instructor facing an inifinite series of winter periods with significant income, but interspersed with summer periods with little income). These differences are captured via the \"cycles\" attribute. \n",
     "\n",
-    "-  the default value is 1, for a consumer with a finite lifecycle that is only experienced once\n",
+    "-  the default value 1 corresponds to a consumer with a finite lifecycle that is only experienced once\n",
     "-  the value 2 corresponds to a consumer who lived that life twice in a row, then died\n",
     "-  the value 0 corresponds to an infinite horizon consumer\n",
     "\n",
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 4: Create another consumer to compare to <span style=\"color:blue\">BaselineExample</span>..."
+    "__Step 4__: Create another consumer to compare to <span style=\"color:blue\">BaselineExample</span>..."
    ]
   },
   {
@@ -275,7 +275,17 @@
     "#### We can now compare the solutions to these two slightly different problems.\n",
     "We are going to compare the consumption functions for the two consumers. Policy functions (including consumption functions) in HARK are stored as attributes of the \"solution\" of the `ConsumerType`. The solution is a list whose index is the time periods (thus, each list item may be a separate solution corresponding to the separate time period). \n",
     "\n",
-    "Since the consumers in this demo follow the  infinite-horizon-with-homogeneous-periods model (remember that we set `BaselineExample.cycles = 0`), we can regard this as a single time period, and hence a single solution. Thus, `BaselineExample.solution[0]` is the sole solution for <span style=\"color:blue\">BaselineExample</span>."
+    "Since the consumers in this demo follow the  infinite-horizon-with-homogeneous-periods model (remember that we set `BaselineExample.cycles = 0`), we can regard this as a single time period, and hence a single solution. Thus, `BaselineExample.solution[0]` is the sole solution for <span style=\"color:blue\">BaselineExample</span>. If, instead, <font color='blue'>BaselineExample</font> had 10 time periods, we could access the 5th period using `BaselineExample.solution[4]` (remember that Python counts from 0). Therefore, the consumption function <font color='blue'>cFunc</font> from the solution to <font color='blue'>BaselineExample</font> is `BaselineExample.solution[0].cFunc`.\n",
+    "\n",
+    "**Steps 5 - 8:**\n",
+    "The following steps involve plotting the consumption functions and the MPCs of the two consumers. First, we will define functions that will be used to plot the MPCs; we then import the necessary modules to plot our solutions; we then plot the consumption functions and display them; and finally, plot the MPCs and display them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 5**: Define functions to plot MPCs:"
    ]
   },
   {
@@ -287,8 +297,12 @@
    "outputs": [],
    "source": [
     "def FirstDiffMPC_Income(x):\n",
-    "    income_change = credit_change\n",
-    "    return (BaselineExample.solution[0].cFunc(x + income_change) - BaselineExample.solution[0].cFunc(x)) / income_change"
+    "    '''Approximate the MPC out of income by giving the agent a very small increase in income, and plot the proportion of \n",
+    "    change that is reflected in increased consumption'''\n",
+    "    income_change = credit_change #declare how much we want to increase (or decrease) income\n",
+    "        #Here we change income by the same amount we changed credit so that the two MPC approximations are compatible\n",
+    "    return (BaselineExample.solution[0].cFunc(x + income_change) - BaselineExample.solution[0].cFunc(x)) / income_change\n",
+    "        #We then calculate the approximate MPC out of income"
    ]
   },
   {
@@ -300,7 +314,16 @@
    "outputs": [],
    "source": [
     "def FirstDiffMPC_Credit(x):\n",
+    "    '''Approximate the MPC out of credit by plotting how much more of the increased credit the agent \n",
+    "    with the higher credit spends'''\n",
     "    return (XtraCreditExample.solution[0].cFunc(x) - BaselineExample.solution[0].cFunc(x)) / credit_change"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 6**: Import the necessary modules:"
    ]
   },
   {
@@ -311,29 +334,22 @@
    },
    "outputs": [],
    "source": [
-    "from HARKutilities import plotFuncs"
+    "from HARKutilities import plotFuncs\n",
+    "import pylab as plt\n",
+    "x_max = 10 #Here we declare the upper limit for the graph"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import pylab as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x_max = 10"
+    "**Step 7**: Plot the consumption functions to easily compare.\n",
+    "\n",
+    "**Note** that `plotFuncs` takes four arguments:\n",
+    "1.  a list of the arguments to plot\n",
+    "2.  the lower bound for the plots\n",
+    "3.  the upper bound for the plots\n",
+    "4.  keywords to pass to the legend for the plot"
    ]
   },
   {
@@ -361,7 +377,17 @@
    ],
    "source": [
     "print('Consumption functions:')\n",
-    "plotFuncs([BaselineExample.solution[0].cFunc, XtraCreditExample.solution[0].cFunc], BaselineExample.solution[0].mNrmMin, x_max, legend_kwds = {'loc':'upper left', 'labels': [\"Baseline\", \"XtraCredit\"]})"
+    "plotFuncs([BaselineExample.solution[0].cFunc, XtraCreditExample.solution[0].cFunc],_ #list args to plot\n",
+    "          BaselineExample.solution[0].mNrmMin, _                                     #lower bound for plot\n",
+    "          x_max, _                                                                   #upper bound for plot\n",
+    "          legend_kwds = {'loc':'upper left', 'labels': [\"Baseline\", \"XtraCredit\"]})  #keywords for plot legend"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 8**: Plot the MPCs to easily compare. See **note** about `plotFuncs` above."
    ]
   },
   {
@@ -390,7 +416,10 @@
    "source": [
     "print('MPC out of Credit v MPC out of Income:')\n",
     "plt.ylim([0.,1.2])\n",
-    "plotFuncs([FirstDiffMPC_Credit, FirstDiffMPC_Income], BaselineExample.solution[0].mNrmMin, x_max, legend_kwds = {'labels':[\"MPC out of credit\", \"MPC out of Income\"]})"
+    "plotFuncs([FirstDiffMPC_Credit, FirstDiffMPC_Income],_                         #list of arguments for plot\n",
+    "          BaselineExample.solution[0].mNrmMin,_                                #lower bound\n",
+    "          x_max,_                                                              #upper bound\n",
+    "          legend_kwds = {'labels':[\"MPC out of credit\", \"MPC out of Income\"]}) #keywords for plot legend"
    ]
   },
   {
@@ -422,21 +451,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
