Updates to TBS_marc

--- a/TBS_marc.ipynb
+++ b/TBS_marc.ipynb
@@ -126,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np                   # numeric Python\n",
@@ -178,14 +180,12 @@
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New instance of TractableConsumerType.<br/>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'''</span><br/><br/>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:Teal\"># Initialize a basic AgentType</span><br/>\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AgentType.\\__init\\__(self,cycles=cycles, time_flow=time_flow, pseudo_terminal=True,<span style=\"color:#FF00FF\">&#42;&#42;</span>kwds)\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AgentType.__init__(self,cycles=cycles, time_flow=time_flow, pseudo_terminal=True,<span style=\"color:#FF00FF\">&#42;&#42;</span>kwds)\n",
     "<br/><br/>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:Teal\"># Add consumer-type specific objects, copying to create independent versions:</span><br/>\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;self.time_vary= [ ] &nbsp;<span style=\"color:Teal\"> #time-variant variables. These (cycles) are actually defined above in the \\__init\\__ call</span>\n",
-    "<br/>\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;self.time_inv= ['DiscFac','Rfree','CRRA','PermGroFacCmp',\n",
-    "                         'UnempPrb','PFMPC','Rnrm','Beth','mLowerBnd','mUpperBnd']<br/>\n",
-    "                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:Teal\"> # time-invariant variables</span><br/>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;self.time_vary= [ ]<br/>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:Teal\"> #time-variant variables. These (cycles) are actually defined above in the __init__ call</span><br/>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;self.time_inv= ['DiscFac','Rfree','CRRA','PermGroFacCmp','UnempPrb','PFMPC','Rnrm','Beth','mLowerBnd','mUpperBnd']<br/>                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:Teal\"> # time-invariant variables</span><br/>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;self.shock_vars= ['eStateNow'] <span style=\"color:teal\"> #current employment state (employed, unemployed), used for<br/>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#tracking state changes due to economic shocks</span>\n",
     "<br/>\n",
@@ -300,8 +300,8 @@
     "<p><span style=\"color:blue\">preSolve</span>() continues by defining several other relationships that will be integral to actually solving the model. The actual code is included below; however, reviewing the lecture notes will most likely offer more clarity than the code. The essential points of the remaining code in the <span style=\"color:blue\">preSolve</span>() are listed here:\n",
     "<br/>\n",
     "- The <span style=\"color:blue\">preSolve</span>() method first finds the target level of $m^e$, which is the point of intersection between the $\\triangle c^e = 0$ and $\\triangle m^e = 0$ loci.<br/>\n",
-    "- It then finds the first, second and third derivatives of the consumption function at the target\n",
-    "- It finds the derivative of the consumption function (which is the MPC) at m = 0\n",
+    "- It then finds the first, second and third derivatives of the consumption function at the target<br/>\n",
+    "- It finds the derivative of the consumption function (which is the MPC) at m = 0<br/>\n",
     "- And then creates an initial list of Euler points (which will be used to simulate the optimal path through time of consumption at each time period)\n",
     "\n",
     "</p>"
@@ -753,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "                 \n",
@@ -1075,7 +1077,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plotFuncs(a.mSSfunc,0,10)"
@@ -1084,7 +1088,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vars(a)"
@@ -1093,7 +1099,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -1158,7 +1166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a.a"
@@ -1167,7 +1177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b.a"
