updates to TBS_marc

--- a/TBS_marc.ipynb
+++ b/TBS_marc.ipynb
@@ -208,7 +208,8 @@
     "<p>The next method (which is still code within the <span style=\"color:blue\">TractableConsumerType</span> class), <span style=\"color:blue\">presolve</span>(), calculates all of the solution objects that can be obtained before conducting the backshooting routine, including the target levels, the perfect foresight solution, (marginal) consumption at m=0, and the small perturbations around the steady state. First, the second, third and fourth derivatives of the utility function&#42; (which will be used to find the MPC, its derivative and 2nd derivative) are defined.\n",
     "<br/>\n",
     "<br/>\n",
-    "&#42;$u(\\bullet)=\\frac{\\bullet^{1-\\rho}}{1-\\rho}$\n"
+    "&#42;$u(\\bullet)=\\frac{\\bullet^{1-\\rho}}{1-\\rho}$\n",
+    "</p>\n"
    ]
   },
   {
@@ -242,7 +243,7 @@
     "`PermGroFacCmp` (already seen above),&nbsp; $\\Gamma$ <br/>\n",
     "`Rnrm`, the net interest factor (`Rfree` normalized by wage growth: &nbsp; $R\\;/\\; \\Gamma$) \n",
     "<br/>\n",
-    "`PFMPC`, the 'Return Patience Factor' &nbsp; $\\frac{(R\\beta)^{1/\\rho}}{R}$ &nbsp; described in [Carroll](http://www.econ2.jhu.edu/people/ccarroll/public/LectureNotes/Consumption/TractableBufferStock.pdf)). \n",
+    "`PFMPC`, the 'Return Patience Factor' &nbsp; $\\frac{(R\\beta)^{1/\\rho}}{R}$ &nbsp; described in [Carroll](http://www.econ2.jhu.edu/people/ccarroll/public/LectureNotes/Consumption/TractableBufferStock.pdf) ). \n",
     "<br/>\n",
     "and `Beth`, a constant used to calculate the 'stable arm points' by which HARK reverse engineers prior periods' consumption.\n",
     "</p>"
